SHA256 está a funcionar como deve ser